--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "express-validator": "^7.2.1",
     "mysql2": "^3.14.2",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.3"
   }
 }
